--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   flip_card: ^0.4.4
+  characters: ^1.0.0
 
 dev_dependencies:
   flutter_test:
